Fix checkbox spacing

--- a/src/client/app/encounter/encounter.component.css
+++ b/src/client/app/encounter/encounter.component.css
@@ -24,16 +24,12 @@ td{
     overflow: hidden;
     padding: 0px;
 }
-/*
+
 .table > tbody > tr > td {
-     vertical-align: middle;
-     padding-left: 5px;
-     padding-right: 5px;
-     padding-top: 0px;
-     padding-bottom: 0px;
-     line-height: 10px !important;
+ padding: 0px !important;
 }
 
+/*
 .table > tbody > tr {
    height: 20px !important;
    padding: 0px !important;
@@ -42,10 +38,19 @@ td{
 */
 .tdContainer{
     vertical-align: middle;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 2px;
 }
 
+.input[type=checkbox]{
+    margin:0px !important;
+    height:10px;
+}
+
+.vertAlign{
+ padding: 3px;
+ vertical-align: middle;
+}
 
 #fillerRow{
     height: 20px;
